--- a/Code/Mantid/Geometry/Geometry.vcproj
+++ b/Code/Mantid/Geometry/Geometry.vcproj
@@ -286,8 +286,26 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\src\regexSupport.cpp"
+				RelativePath=".\src\RegexSupport.cpp"
 				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\$(InputName)1.obj"
+						XMLDocumentationFileName="$(IntDir)\$(InputName)1.xdc"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\$(InputName)1.obj"
+						XMLDocumentationFileName="$(IntDir)\$(InputName)1.xdc"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\Deprecated\src\RotCounter.cpp"
@@ -400,11 +418,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\AuxException.h"
+				RelativePath=".\auxinc\AuxException.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\AuxException.h"
+				RelativePath=".\Deprecated\inc\AuxException.h"
 				>
 			</File>
 			<File
@@ -484,11 +502,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\IndexIterator.h"
+				RelativePath=".\Deprecated\inc\IndexIterator.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\IndexIterator.h"
+				RelativePath=".\auxinc\IndexIterator.h"
 				>
 			</File>
 			<File
@@ -516,11 +534,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\Matrix.h"
+				RelativePath=".\inc\MantidGeometry\Matrix.h"
 				>
 			</File>
 			<File
-				RelativePath=".\inc\MantidGeometry\Matrix.h"
+				RelativePath=".\auxinc\Matrix.h"
 				>
 			</File>
 			<File
@@ -592,11 +610,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\RotCounter.h"
+				RelativePath=".\Deprecated\inc\RotCounter.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\RotCounter.h"
+				RelativePath=".\auxinc\RotCounter.h"
 				>
 			</File>
 			<File
@@ -656,19 +674,19 @@
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\XMLattribute.h"
-				>
-			</File>
-			<File
 				RelativePath=".\Deprecated\inc\XMLattribute.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\XMLcollect.h"
+				RelativePath=".\auxinc\XMLattribute.h"
 				>
 			</File>
 			<File
 				RelativePath=".\Deprecated\inc\XMLcollect.h"
+				>
+			</File>
+			<File
+				RelativePath=".\auxinc\XMLcollect.h"
 				>
 			</File>
 			<File
@@ -680,19 +698,19 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLcomp.h"
-				>
-			</File>
-			<File
 				RelativePath=".\auxinc\XMLcomp.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLgrid.h"
+				RelativePath=".\Deprecated\inc\XMLcomp.h"
 				>
 			</File>
 			<File
 				RelativePath=".\auxinc\XMLgrid.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Deprecated\inc\XMLgrid.h"
 				>
 			</File>
 			<File
@@ -704,19 +722,19 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLgroup.h"
-				>
-			</File>
-			<File
 				RelativePath=".\auxinc\XMLgroup.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLindex.h"
+				RelativePath=".\Deprecated\inc\XMLgroup.h"
 				>
 			</File>
 			<File
 				RelativePath=".\auxinc\XMLindex.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Deprecated\inc\XMLindex.h"
 				>
 			</File>
 			<File
@@ -728,19 +746,19 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLobject.h"
-				>
-			</File>
-			<File
 				RelativePath=".\auxinc\XMLobject.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLpath.h"
+				RelativePath=".\Deprecated\inc\XMLobject.h"
 				>
 			</File>
 			<File
 				RelativePath=".\auxinc\XMLpath.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Deprecated\inc\XMLpath.h"
 				>
 			</File>
 			<File
@@ -756,11 +774,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\XMLvector.h"
+				RelativePath=".\Deprecated\inc\XMLvector.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLvector.h"
+				RelativePath=".\auxinc\XMLvector.h"
 				>
 			</File>
 		</Filter>
