re #125 Category added to algorithm base class.  This allows algorithms to be sensibly grouped in a user interface.
Also added getNamesAndCategories function to AlgorithmManager
Tests included

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -258,6 +258,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\inc\MantidDataHandling\LoadMappingTable.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidDataHandling\LoadNeXus.h"
 				>
 			</File>
