re #53 Improved test for the availability of unordered_map.h as linuxs1 does not have it. The Scons build will test for its presence and use it if available. If you are using another process to build it then you need to add -DHAS_UNORDERED_MAP_H to your compiler line.

--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -145,6 +145,12 @@ else:
 	lpts=re.split("\s+",flags)
 	lpts.append('-g')
 	
+#check existence of Header files
+conf = Configure(env)
+if conf.CheckCXXHeader('unordered_map.h'):
+	conf.env.Append('-DHAS_UNORDERED_MAP_H')
+env = conf.Finish()
+
 #GET INCLUDE PATHS FOR OTHER PARTS OF MANTID
 dirpath=os.listdir(uppath)
 while(len(dirpath)):
