re #127 Edit the windows build to embed the manifest files required to import the API to python.

--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -79,6 +79,10 @@ if os.name == 'nt':
 	libList.append('gsl')
 
 	cppPaths = [boost_path, third_party + '/include/', python_path + '/include/']
+	
+	#set up scons to embed manifest files
+	env['LINKCOM'] = [env['LINKCOM'], 'mt.exe -nologo -manifest ${TARGET}.manifest -outputresource:$TARGET;1']
+	env['SHLINKCOM'] = [env['SHLINKCOM'], 'mt.exe -nologo -manifest ${TARGET}.manifest -outputresource:$TARGET;2']
 
 else:
 	print "* COMMENCING LINUX BUILD *"
