re #64 buildable but not finished ObjectTest.h

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -192,6 +192,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\LoadMappingTable.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\LoadNeXus.cpp"
 				>
 			</File>
