--- a/Code/Mantid/Geometry/SConscript
+++ b/Code/Mantid/Geometry/SConscript
@@ -6,7 +6,7 @@ import MantidBuild
 #GET LIST OF CPPS
 codeFolder = os.path.abspath('./src')
 listCpps = MantidBuild.getCPPFiles(codeFolder)
-codeFolder = os.path.abspath('./Deprecated/src')
+#codeFolder = os.path.abspath('./Deprecated/src')
 listCpps = listCpps + MantidBuild.getCPPFiles(codeFolder)
 
 # at the moment not all of geometry works
