re #64 Bug fixes in geometry and more test in ObjectTest.h

--- a/Code/Mantid/DataObjects/DataObjects.vcproj
+++ b/Code/Mantid/DataObjects/DataObjects.vcproj
@@ -225,6 +225,10 @@
 				RelativePath=".\test\WorkspaceHistoryTest.h"
 				>
 			</File>
+			<File
+				RelativePath=".\test\WorkspaceIteratorTest.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
