--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -188,6 +188,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\Axis.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\EnvironmentHistory.cpp"
 				>
 			</File>
@@ -209,6 +213,10 @@
 			</File>
 			<File
 				RelativePath=".\src\LocatedDataValue.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\RefAxis.cpp"
 				>
 			</File>
 			<File
