--- a/Code/Mantid/Kernel/Kernel.vcproj
+++ b/Code/Mantid/Kernel/Kernel.vcproj
@@ -267,6 +267,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\inc\MantidKernel\DataService.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidKernel\DllExport.h"
 				>
 			</File>
