--- a/Code/Mantid/release/Mantid.properties
+++ b/Code/Mantid/release/Mantid.properties
@@ -15,3 +15,6 @@ logging.channels.fileChannel.formatter.pattern = %Y-%m-%d %H:%M:%S,%i [%I] %p %s
 logging.formatters.f1.class = PatternFormatter
 logging.formatters.f1.pattern = %s-[%p] %t
 logging.formatters.f1.times = UTC;
+
+logging.loggers.root.channel.channel3 = signalChannel
+logging.channels.signalChannel.class = SignalChannel
