re #151 Added the missing boost dls into third party andcorrected broken tests and main

--- a/Code/Mantid/Kernel/Kernel.vcproj
+++ b/Code/Mantid/Kernel/Kernel.vcproj
@@ -379,11 +379,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\inc\MantidKernel\Signal.h"
+				RelativePath=".\inc\MantidKernel\SignalChannel.h"
 				>
 			</File>
 			<File
-				RelativePath=".\inc\MantidKernel\SignalChannel.h"
+				RelativePath=".\test\SignalChannelTest.h"
 				>
 			</File>
 			<File
