--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -126,6 +126,7 @@ else:
 	libList.append('boost_python'+boost_append)
 	libList.append('boost_filesystem'+boost_append)
 	libList.append('boost_regex'+boost_append)
+	libList.append('boost_signals'+boost_append)
 	libList.append('NeXus')
 
 	if os.path.isdir('/usr/local/poco-1.3.1/'+ '/lib/Linux/i686') :
