--- a/Code/Mantid/PythonAPI/PythonAPI.vcproj
+++ b/Code/Mantid/PythonAPI/PythonAPI.vcproj
@@ -163,6 +163,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\src\FrameworkManager.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\PythonInterface.cpp"
 				>
 			</File>
@@ -176,6 +180,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\inc\MantidPythonAPI\FrameworkManager.h"
+				>
+			</File>
 			<File
 				RelativePath=".\inc\MantidPythonAPI\PythonInterface.h"
 				>
