More that I didn't mean to check in. And ConvertUnitsTest slimmed down because it was taking ages to run on the Windows Build Server. Re #150.

--- a/Code/Mantid/release/Mantid.properties
+++ b/Code/Mantid/release/Mantid.properties
@@ -2,7 +2,7 @@
 plugins.directory = .
 
 #logging configuration
-logging.loggers.root.level = debug
+logging.loggers.root.level = information
 logging.loggers.root.channel.class = SplitterChannel
 logging.loggers.root.channel.channel1 = consoleChannel
 logging.loggers.root.channel.channel2 = fileChannel
